--- a/main.scss
+++ b/main.scss
@@ -171,7 +171,7 @@ header {
   }
 }
 /* End Header style */
-/* Start overlay style 
+/* Start overlay style */
 .overlay {
   width: 100%;
   margin-top: 49px;
@@ -201,7 +201,6 @@ header {
           }
         }
       }
-      
     }
   }
   @media only screen and (max-width: 767px) {
@@ -209,7 +208,7 @@ header {
       height: calc(50vh - 49px) !important;
     }
   }
-}*/
+}
 /* End overlay style */
 /* Start Contact by Phone or Email and Up button  */
 .phone-email {
